#19 Running tasks of a task group in parallel  - now passing timeout to the taskgroup and there passing to the runner.  - also running a list of tasks in one thread to have also the timeout there.  - javadoc now with Graphviz support (umldoclet)  - build actions extended to provide graphviz